Added support for java 9 args in .ini file
Signed-off-by: Viktoria Dlugopolskaya <viksnsk@gmail.com>